update:新增微信相关支付，格式化相关代码

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
       "php": ">=7.2",
       "guzzlehttp/guzzle": "^7.2",
-        "illuminate/support": "^7.30"
+        "illuminate/support": "^7.30",
+        "wechatpay/wechatpay-guzzle-middleware": "^0.2.1"
     },
     "authors": [
         {
