--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,10 @@
     "type": "library",
     "require": {
       "php": ">=7.2",
-      "guzzlehttp/guzzle": "^7.2",
+      "guzzlehttp/guzzle": "^6.5",
         "illuminate/support": "^7.30",
-        "wechatpay/wechatpay-guzzle-middleware": "^0.2.1"
+        "wechatpay/wechatpay-guzzle-middleware": "^0.2.1",
+        "alipaysdk/easysdk": "^2.2"
     },
     "authors": [
         {
