--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
       }
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": "^5.0",
+        "vlucas/phpdotenv": "^5.3"
     },
     "autoload-dev": {
       "psr-4": {
